--- a/k8s-azure.yml
+++ b/k8s-azure.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: service-aforo255
-        image: antony0618/servicenet5:#{Build.BuildId}#
+        image: miguel88/servicenet5:#{Build.BuildId}#
         ports:
         - containerPort: 80
         imagePullPolicy: Always
